--- a/Packages.props
+++ b/Packages.props
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
 	<ItemGroup Label="Runtime Dependencies">
+		<PackageReference Update="Funcky" Version="[2.2.0, 3)" />
+		<PackageReference Update="Autofac" Version="[6.0.0, 7)" />
 	</ItemGroup>
 	<ItemGroup Label="Build Dependencies">
 		<PackageReference Update="Messerli.CodeStyle" Version="1.2.1" />
-		<PackageReference Update="Equals.Fody" Version="4.0.1" />
-		<PackageReference Update="Fody" Version="6.2.6" />
 	</ItemGroup>
 	<ItemGroup Label="Test Dependencies">
 		<PackageReference Update="Microsoft.NET.Test.Sdk" Version="15.9.0" />
 		<PackageReference Update="xunit" Version="2.4.0" />
 		<PackageReference Update="xunit.runner.visualstudio" Version="2.4.0" />
+		<PackageReference Update="Funcky.Xunit" Version="0.1.3" />
 	</ItemGroup>
 </Project>
